fixed spacing issues

--- a/frontend/src/components/pages/Landingpage.module.css
+++ b/frontend/src/components/pages/Landingpage.module.css
@@ -1,10 +1,16 @@
 @import "../var.css";
 
+.background {
+	position: fixed;
+	top: 0;
+	left: 0;
+	height: 100vh;
+	width: 100%;
+}
 .wrapper {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	height: 100%;
 }
 
 .container {
