--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,7 +4,6 @@ html {
 	box-sizing: border-box;
 	margin: 0;
 	padding: 0;
-	height: 100%;
 }
 
 body {
@@ -15,8 +14,7 @@ body {
 	-moz-osx-font-smoothing: grayscale;
 
 	background-color: var(--antiflash-white);
-	margin-top: 0px;
-	height: 100%;
+	margin-top: 150px;
 }
 
 code {
@@ -46,11 +44,3 @@ input {
 		"Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
 		sans-serif;
 }
-
-#root {
-	height: 100%;
-}
-
-/* #root > div {
-	height: 100%;
-} */
